08-k8s-part1/k8s/ingress/nodeapp2.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-nodeapp2
  namespace: default
  labels:
    app: nodeapp2
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: nodeapp2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapp-path2
  namespace: default
  labels:
    app: nodeapp2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodeapp2
  template:
    metadata:
      name: nodeapp-path2
      labels:
        app: nodeapp2
    spec:
      containers:
      - name: nodeapp2
        image: stepanowon/nodeapp-path2:1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
