08-k8s-part1/k8s/ingress/haproxy-ingress-pathrewrite.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path1-ingress
  annotations:
    haproxy.org/path-rewrite: "/path1/(.*) /\\1"
spec:
  ingressClassName: haproxy
  rules:
  - host: demo.192.168.56.60.nip.io
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /path1/
        backend:
          service:
            name: svc-nodeapp1
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path2-ingress
  annotations:
    haproxy.org/path-rewrite: "/path2/(.*) /\\1"
spec:
  ingressClassName: haproxy
  rules:
  - host: demo.192.168.56.60.nip.io
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /path2/
        backend:
          service:
            name: svc-nodeapp2
            port:
              number: 8080
