08-k8s-part1/k8s/ingress/haproxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: haproxy-ingress
spec:
  ingressClassName: haproxy
  rules:
  - host: demo.192.168.56.60.nip.io
    http:
      paths:
      - pathType: Prefix
        path: /path1
        backend:
          service:
            name: svc-nodeapp1
            port:
              number: 8080
      - pathType: Prefix
        path: /path2
        backend:
          service:
            name: svc-nodeapp2
            port:
              number: 8080
